--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,16 @@
 </head>
 <body>
 <h1>My Library</h1>
-<ul>
-    {% for book in books : %}
-        <li>{{book.title}} | {{book.author}} | {{book.rating}}</li>
-    {% endfor %}
-</ul>
+{%if not books : %}
+    <h3>Your library is empty!</h3>
+{%else: %}
+    <ul>
+        {% for book in books : %}
+            <li><a href="{{url_for('delete_the_book',book_id=book.id)}}">Delete this book </a>{{book.title}} | {{book.author}} | {{book.rating}}
+                <a href="{{url_for('edit_the_rating',book_id=book.id)}}"> Edit the rating</a></li>
+        {% endfor %}
+    </ul>
+{% endif %}
 <a href="{{url_for('add_book')}}">Add new book</a>
 </body>
 </html>
